# ddd-aes

./: .clang-format  .editorconfig  .gitignore  CITATION.bib  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: scorecard.yml
bbb-ddd-aes/performance/: CMakeLists.txt  README.md  bbb-ddd-aes-ref-perf.c  bbb-ddd-aes-ref-perf.h  gen-testvectors.c  tests.c
bbb-ddd-aes/readability/: CMakeLists.txt  README.md  aes.c  bbb-ddd-aes-ref-readability.c  bbb-ddd-aes-ref-readability.h  gen-testvectors.c  polyval.h  tests.c
ddd-aes/performance/: CMakeLists.txt  README.md  ddd-aes-ref-perf.c  ddd-aes-ref-perf.h  gen-testvectors.c  tests.c
ddd-aes/readability/: CMakeLists.txt  README.md  aes.h  ddd-aes-ref-readability.c  ddd-aes-ref-readability.h  gen-testvectors.c  polyval.c  tests.c  zeroize.c  zeroize.h
